--- a/PerchReadyApp/apps/Perch/iphone/native/PerchReadyAppPerchIphone-Info.plist
+++ b/PerchReadyApp/apps/Perch/iphone/native/PerchReadyAppPerchIphone-Info.plist
@@ -32,7 +32,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>${PRODUCT_NAME}</string>
+	<string>RA Insurance</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
