--- a/PerchReadyApp/apps/Perch/iphone/native/PerchReadyAppPerchIphone-Info.plist
+++ b/PerchReadyApp/apps/Perch/iphone/native/PerchReadyAppPerchIphone-Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleDisplayName</key>
-	<string>Perch</string>
+	<string>RA Insurance</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFiles</key>
